--- a/HenriqueValcanaia/Tutorial.xib
+++ b/HenriqueValcanaia/Tutorial.xib
@@ -37,49 +37,110 @@
                         <constraint firstAttribute="width" constant="100" id="mue-OE-zpu"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to my portfolio(?)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="puC-iu-R20">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Welcome to my portfolio" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="puC-iu-R20">
                     <rect key="frame" x="197" y="54" width="206" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe right if you wanna read more about the project" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gri-VG-bfY">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe right if you wanna read more about the project" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gri-VG-bfY">
                     <rect key="frame" x="376" y="353" width="224" height="74"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="74" id="0dq-2r-G59"/>
-                        <constraint firstAttribute="width" constant="224" id="lJC-xr-6C4"/>
+                        <constraint firstAttribute="width" constant="224" id="lJC-xr-6C4">
+                            <variation key="widthClass=compact" constant="143"/>
+                        </constraint>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe left if you don't care about the project" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VXS-ns-K2B">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe left if you don't care about the project" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VXS-ns-K2B">
                     <rect key="frame" x="36" y="371" width="182" height="56"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="56" id="JGi-Mz-XKG"/>
-                        <constraint firstAttribute="width" constant="182" id="Rfa-51-tZ6"/>
+                        <constraint firstAttribute="height" constant="56" id="JGi-Mz-XKG">
+                            <variation key="widthClass=compact" constant="91"/>
+                        </constraint>
+                        <constraint firstAttribute="width" constant="182" id="Rfa-51-tZ6">
+                            <variation key="widthClass=compact" constant="129"/>
+                        </constraint>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cydria" translatesAutoresizingMaskIntoConstraints="NO" id="cxv-hN-fga">
+                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="240" id="8Ee-mf-BbQ"/>
+                        <constraint firstAttribute="width" secondItem="cxv-hN-fga" secondAttribute="height" multiplier="1:1" id="dEA-H2-284"/>
+                    </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="8Ee-mf-BbQ"/>
+                            <exclude reference="dEA-H2-284"/>
+                        </mask>
+                    </variation>
+                    <variation key="widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="8Ee-mf-BbQ"/>
+                            <include reference="dEA-H2-284"/>
+                        </mask>
+                    </variation>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="gri-VG-bfY" secondAttribute="trailing" id="1zM-Dd-gEs"/>
                 <constraint firstItem="puC-iu-R20" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="54" id="5ju-fM-qxv"/>
-                <constraint firstAttribute="bottom" secondItem="i3M-Re-L7V" secondAttribute="bottom" constant="100" id="Jni-44-O3V"/>
-                <constraint firstItem="VXS-ns-K2B" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="36" id="KL3-ou-YZD"/>
+                <constraint firstAttribute="bottom" secondItem="i3M-Re-L7V" secondAttribute="bottom" constant="100" id="Jni-44-O3V">
+                    <variation key="widthClass=compact" constant="78"/>
+                </constraint>
+                <constraint firstItem="VXS-ns-K2B" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="36" id="KL3-ou-YZD">
+                    <variation key="widthClass=compact" constant="8"/>
+                </constraint>
                 <constraint firstAttribute="centerX" secondItem="puC-iu-R20" secondAttribute="centerX" id="Mla-AO-R9w"/>
-                <constraint firstAttribute="trailing" secondItem="i3M-Re-L7V" secondAttribute="trailing" constant="142" id="QIV-ee-PEZ"/>
-                <constraint firstItem="0ac-Gj-Btl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="146" id="VtY-1b-IoN"/>
-                <constraint firstAttribute="bottom" secondItem="0ac-Gj-Btl" secondAttribute="bottom" constant="100" id="atD-Ar-k1b"/>
-                <constraint firstAttribute="bottom" secondItem="gri-VG-bfY" secondAttribute="bottom" constant="173" id="fth-wX-eOG"/>
-                <constraint firstAttribute="bottom" secondItem="VXS-ns-K2B" secondAttribute="bottom" constant="173" id="vHv-Uy-4d8"/>
+                <constraint firstAttribute="trailing" secondItem="i3M-Re-L7V" secondAttribute="trailing" constant="142" id="QIV-ee-PEZ">
+                    <variation key="widthClass=compact" constant="61"/>
+                </constraint>
+                <constraint firstItem="0ac-Gj-Btl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="146" id="VtY-1b-IoN">
+                    <variation key="widthClass=compact" constant="63"/>
+                </constraint>
+                <constraint firstAttribute="bottom" secondItem="0ac-Gj-Btl" secondAttribute="bottom" constant="100" id="atD-Ar-k1b">
+                    <variation key="widthClass=compact" constant="78"/>
+                </constraint>
+                <constraint firstItem="cxv-hN-fga" firstAttribute="top" secondItem="puC-iu-R20" secondAttribute="bottom" constant="13" id="ck8-qA-mGN"/>
+                <constraint firstAttribute="bottom" secondItem="gri-VG-bfY" secondAttribute="bottom" constant="173" id="fth-wX-eOG">
+                    <variation key="widthClass=compact" constant="181"/>
+                </constraint>
+                <constraint firstAttribute="centerX" secondItem="cxv-hN-fga" secondAttribute="centerX" id="onk-UC-4jb"/>
+                <constraint firstAttribute="bottom" secondItem="VXS-ns-K2B" secondAttribute="bottom" constant="173" id="vHv-Uy-4d8">
+                    <variation key="widthClass=compact" constant="173"/>
+                </constraint>
             </constraints>
+            <variation key="default">
+                <mask key="subviews">
+                    <exclude reference="cxv-hN-fga"/>
+                </mask>
+                <mask key="constraints">
+                    <exclude reference="ck8-qA-mGN"/>
+                    <exclude reference="onk-UC-4jb"/>
+                </mask>
+            </variation>
+            <variation key="widthClass=compact">
+                <mask key="subviews">
+                    <include reference="cxv-hN-fga"/>
+                </mask>
+                <mask key="constraints">
+                    <include reference="ck8-qA-mGN"/>
+                    <include reference="onk-UC-4jb"/>
+                </mask>
+            </variation>
+            <point key="canvasLocation" x="59" y="602"/>
         </view>
     </objects>
     <resources>
+        <image name="cydria" width="810" height="540"/>
         <image name="pointing-left" width="2500" height="2500"/>
         <image name="pointing-right" width="2500" height="2500"/>
     </resources>
